idf_component_register(
  SRCS
    "main.c"
    "vesc_manager.c"
    "ui_update.c"
    "actions.c"
    "waveshare_rgb_lcd_port.c"
    "lvgl_port.c"

    # UI files (from your actual list)
    "ui/images.c"
    "ui/screens.c"
    "ui/styles.c"
    "ui/ui_font_olney_125.c"
    "ui/ui_font_olney_16.c"
    "ui/ui_font_olney_160.c"
    "ui/ui_font_olney_20.c"
    "ui/ui_font_olney_24.c"
    "ui/ui_font_olney_40.c"
    "ui/ui_font_olney_55.c"
    "ui/ui_font_olney_85.c"
    "ui/ui_image_background.c"
    "ui/ui_image_battery_icon_fill.c"
    "ui/ui_image_battery_icon.c"
    "ui/ui_image_home_icon.c"
    "ui/ui_image_blank_img.c"
    "ui/ui_image_connection_icon_connected.c"
    "ui/ui_image_connection_icon_disconnected.c"
    "ui/ui_image_indicator_left.c"
    "ui/ui_image_indicator_right.c"
    "ui/ui_image_light_full_icon.c"
    "ui/ui_image_light_half_icon.c"
    "ui/ui_image_mode_button_cycle.c"
    "ui/ui_image_mode_button_tractor.c"
    "ui/ui_image_mode_button_unlocked.c"
    "ui/ui_image_mode_button_walk.c"
    "ui/ui_image_pad_lock_icon.c"
    "ui/ui_image_power_arc.c"
    "ui/ui_image_power_bg.c"
    "ui/ui_image_settings_icon.c"
    "ui/ui_image_speed_arc.c"
    "ui/ui_image_speed_bg.c"
    "ui/ui.c"
  PRIV_REQUIRES spi_flash esp_lcd esp_lcd_touch lvgl vesc_uart
  INCLUDE_DIRS "." "ui"
)
